--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
+    "firebase": "^10.13.1",
     "fs": "^0.0.1-security",
     "next": "14.2.8",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18"
   },
