--- a/my-app/package.json
+++ b/my-app/package.json
@@ -10,13 +10,15 @@
   },
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
+    "@sendgrid/mail": "^8.1.3",
     "firebase": "^10.13.1",
     "fs": "^0.0.1-security",
     "next": "14.2.8",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "sendgrid": "^5.2.3"
   },
   "devDependencies": {
     "@types/node": "^20",
