--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,11 +13,13 @@
     "@sendgrid/mail": "^8.1.3",
     "firebase": "^10.13.1",
     "fs": "^0.0.1-security",
+    "jsonrepair": "^3.8.0",
     "next": "14.2.8",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-toastify": "^10.0.5",
     "sendgrid": "^5.2.3"
   },
   "devDependencies": {
