--- a/my-app/.eslintrc.json
+++ b/my-app/.eslintrc.json
@@ -1,3 +1,16 @@
 {
-  "extends": ["next/core-web-vitals", "next/typescript"]
+  "extends": ["next/core-web-vitals", "next/typescript"],
+  "rules": {
+    // Disable `react/no-unescaped-entities` rule
+    "react/no-unescaped-entities": "off",
+
+    // Disable TypeScript's `no-explicit-any` rule
+    "@typescript-eslint/no-explicit-any": "off",
+
+    // Disable `no-unused-vars` rule
+    "@typescript-eslint/no-unused-vars": "off",
+
+    // Disable other rules as needed
+    "react/prop-types": "off"  // Disable prop-types if using TypeScript
+  }
 }
