--- a/my-app/package.json
+++ b/my-app/package.json
@@ -17,6 +17,7 @@
     "next": "14.2.8",
     "next-auth": "^4.24.7",
     "react": "^18",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
+    "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
