--- a/my-app/package.json
+++ b/my-app/package.json
@@ -21,13 +21,15 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
-    "sendgrid": "^5.2.3"
+    "sendgrid": "^5.2.3",
+    "uuid": "^10.0.0"
   },
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
     "postcss": "^8",
