--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
   "dependencies": {
     "@google/generative-ai": "^0.17.1",
     "@sendgrid/mail": "^8.1.3",
+    "chart": "^0.1.2",
+    "chart.js": "^4.4.4",
     "firebase": "^10.13.1",
     "fs": "^0.0.1-security",
     "jsonrepair": "^3.8.0",
-    "next": "14.2.8",
+    "next": "^14.2.12",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-beautiful-dnd": "^13.1.1",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
